# brs

./: CMakeLists.txt  README.md
brs/: .CMakeLists.txt.swp  CMakeLists.txt  brs.h  version.cpp  version.h.in
cmake/: BRSConfig.cmake  CMakeLists.txt
debian/: bsr-dev.install  bsr-doc.install  bsr.install  changelog  control  copyright
doc/: CMakeLists.txt  brs.doxy.in
tests/: .catch_brs.cpp.swp  CMakeLists.txt  catch_brs.cpp  catch_main.cpp  catch_main.h
